--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -27,18 +27,13 @@
   </div>
 
   <div class="my-5">
-    <%= form.label :samsara_id %>
-    <%= form.text_field :samsara_id, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": driver.errors[:samsara_id].none?, "border-red-400 focus:outline-red-600": driver.errors[:samsara_id].any?}] %>
-  </div>
-
-  <div class="my-5">
     <%= form.label :phone_number %>
     <%= form.text_field :phone_number, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": driver.errors[:phone_number].none?, "border-red-400 focus:outline-red-600": driver.errors[:phone_number].any?}] %>
   </div>
 
   <div class="my-5">
     <%= form.label :status %>
-    <%= form.number_field :status, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": driver.errors[:status].none?, "border-red-400 focus:outline-red-600": driver.errors[:status].any?}] %>
+    <%= form.select :status, Driver.statuses.keys.map { |status| [status.titleize, status] }, {}, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": driver.errors[:status].none?, "border-red-400 focus:outline-red-600": driver.errors[:status].any?}] %>
   </div>
 
   <div class="inline">
