--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -7,7 +7,10 @@
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Drivers</h1>
-    <%= link_to "New driver", new_driver_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+    <div class="flex items-center gap-2">
+      <%= link_to "Fetch", fetch_drivers_path, class: "rounded-md px-3.5 py-2.5 bg-gray-600 hover:bg-gray-500 text-white block font-medium" %>
+      <%= link_to "New driver", new_driver_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
+    </div>
   </div>
 
   <div id="drivers" class="min-w-full">
