--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -9,6 +9,58 @@
 
   <%= render @driver %>
 
+
+  <div class="grid grid-cols-2 md:grid-cols-4 gap-6 my-8">
+    <!-- Break Timer -->
+    <div class="flex flex-col items-center">
+      <div class="w-24 h-24 rounded-full border-4 border-blue-500 flex items-center justify-center">
+        <div class="text-center">
+          <div class="text-xl font-bold">
+            <%= ((@driver.clocks&.dig("break", "timeUntilBreakDurationMs") || 0) / (1000 * 60 * 60.0)).round(1) %>h
+          </div>
+          <div class="text-xs text-gray-500">Until Break</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Drive Timer -->
+    <div class="flex flex-col items-center">
+      <div class="w-24 h-24 rounded-full border-4 border-green-500 flex items-center justify-center">
+        <div class="text-center">
+          <div class="text-xl font-bold">
+            <%= ((@driver.clocks&.dig("drive", "driveRemainingDurationMs") || 0) / (1000 * 60 * 60.0)).round(1) %>h
+          </div>
+          <div class="text-xs text-gray-500">Drive Time</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Shift Timer -->
+    <div class="flex flex-col items-center">
+      <div class="w-24 h-24 rounded-full border-4 border-yellow-500 flex items-center justify-center">
+        <div class="text-center">
+          <div class="text-xl font-bold">
+            <%= ((@driver.clocks&.dig("shift", "shiftRemainingDurationMs") || 0) / (1000 * 60 * 60.0)).round(1) %>h
+          </div>
+          <div class="text-xs text-gray-500">Shift Time</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Cycle Timer -->
+    <div class="flex flex-col items-center">
+      <div class="w-24 h-24 rounded-full border-4 border-purple-500 flex items-center justify-center">
+        <div class="text-center">
+          <div class="text-xl font-bold">
+            <%= ((@driver.clocks&.dig("cycle", "cycleRemainingDurationMs") || 0) / (1000 * 60 * 60.0)).round(1) %>h
+          </div>
+          <div class="text-xs text-gray-500">Cycle Time</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <%= link_to "Edit this driver", edit_driver_path(@driver), class: "mt-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
   <%= link_to "Back to drivers", drivers_path, class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
   <div class="inline-block ml-2">
