--- a/app/views/drivers/_driver.html.erb
+++ b/app/views/drivers/_driver.html.erb
@@ -12,6 +12,6 @@
   </div>
 
   <div class="text-sm text-gray-500">
-    Samsara ID: <%= driver.samsara_id %>
+    Samsara ID: <%= link_to driver.samsara_id, "https://cloud.samsara.com/o/4007512/fleet/config/drivers?view=active", target: "_blank" %>
   </div>
 </div>
