--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,14 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
-    <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <!-- Load Poppins font from Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -72,5 +76,9 @@
     <main class="container mx-auto mt-8 px-5 max-w-7xl px-4 sm:px-6 lg:px-8">
       <%= yield %>
     </main>
+
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDajwFDfpgmYHhj-74PwFTaL2v_vuN4_bk&callback=initMap">
+    </script>
   </body>
 </html>
