--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,7 +78,7 @@
     </main>
 
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDajwFDfpgmYHhj-74PwFTaL2v_vuN4_bk&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDajwFDfpgmYHhj-74PwFTaL2v_vuN4_bk&libraries=places&callback=initMap">
     </script>
   </body>
 </html>
