--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -12,39 +12,26 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": location.errors[:user_id].none?, "border-red-400 focus:outline-red-600": location.errors[:user_id].any?}] %>
-  </div>
-
-  <div class="my-5">
     <%= form.label :name %>
     <%= form.text_field :name, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": location.errors[:name].none?, "border-red-400 focus:outline-red-600": location.errors[:name].any?}] %>
   </div>
 
   <div class="my-5">
-    <%= form.label :samsara_id %>
-    <%= form.text_field :samsara_id, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": location.errors[:samsara_id].none?, "border-red-400 focus:outline-red-600": location.errors[:samsara_id].any?}] %>
+    <%= form.label :address, "Search Address" %>
+    <%= text_field_tag :address_search, "",
+        class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full focus:outline-blue-600",
+        placeholder: "Start typing an address...",
+        data: {
+          controller: "places-autocomplete",
+          places_autocomplete_target: "input",
+          action: "places-autocomplete#initAutocomplete"
+        } %>
   </div>
 
-  <div class="my-5">
-    <%= form.label :formatted_address %>
-    <%= form.text_field :formatted_address, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": location.errors[:formatted_address].none?, "border-red-400 focus:outline-red-600": location.errors[:formatted_address].any?}] %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :geofence %>
-    <%= form.text_field :geofence, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": location.errors[:geofence].none?, "border-red-400 focus:outline-red-600": location.errors[:geofence].any?}] %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :latitude %>
-    <%= form.text_field :latitude, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": location.errors[:latitude].none?, "border-red-400 focus:outline-red-600": location.errors[:latitude].any?}] %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :longitude %>
-    <%= form.text_field :longitude, class: ["block shadow rounded-md border outline-none px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": location.errors[:longitude].none?, "border-red-400 focus:outline-red-600": location.errors[:longitude].any?}] %>
-  </div>
+  <%# Hidden fields that will be updated by Places Autocomplete %>
+  <%= form.hidden_field :formatted_address %>
+  <%= form.hidden_field :latitude %>
+  <%= form.hidden_field :longitude %>
 
   <div class="inline">
     <%= form.submit class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
