--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -5,8 +5,8 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <h1 class="font-bold text-4xl">Showing location</h1>
-  <div id="map" class="w-full h-96 mb-6 rounded-lg shadow-md"></div>
+  <h1 class="font-bold text-4xl"><%= @location.name %></h1>
+  <div id="map" class="mt-4 w-full h-96 mb-6 rounded-lg shadow-md"></div>
 
   <script>
     function initMap() {
@@ -64,8 +64,6 @@
       <% end %>
     }
   </script>
-
-
 
   <%= render @location %>
 
