--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,9 @@
                 <%= link_to "Vehicles", vehicles_path,
                     class: "#{active_link?('/vehicles')} rounded-md px-3 py-2 text-sm font-medium" %>
 
+                <%= link_to "Trailers", trailers_path,
+                    class: "#{active_link?('/trailers')} rounded-md px-3 py-2 text-sm font-medium" %>
+
                 <%= link_to "Orders", orders_path,
                     class: "#{active_link?('/orders')} rounded-md px-3 py-2 text-sm font-medium" %>
 
