make geofence eiditing work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,8 +80,8 @@
       <%= yield %>
     </main>
 
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDajwFDfpgmYHhj-74PwFTaL2v_vuN4_bk&libraries=places&callback=initMap">
+    <script async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDajwFDfpgmYHhj-74PwFTaL2v_vuN4_bk&libraries=places,drawing">
     </script>
   </body>
 </html>
