--- a/app/views/trailers/_trailer.html.erb
+++ b/app/views/trailers/_trailer.html.erb
@@ -17,7 +17,7 @@
     </p>
 
     <p class="my-2">
-      <%= trailer.samsara_id %>
+      <%= link_to trailer.samsara_id, "https://cloud.samsara.com/o/4007512/devices/#{trailer.samsara_id}/vehicle", target: "_blank" %>
     </p>
 
     <p class="text-xs text-gray-400">
